add background image and discord section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="navbar" href="#links">Links</a>
             <a class="navbar" href="#contact">Contact</a>
 
-            <!-- To be displayed when viewing on a device with a small screen width-->
+            <!-- to be displayed when viewing on a device with a small screen width-->
             <button id="dropdown-button" onclick="ToggleNavMenu()">☰</button>
             <div id="hidden-menu">
                 <a class="hidden-menu-item" href="index.html">Home</a>
@@ -29,8 +29,61 @@
                 <a class="hidden-menu-item" href="#contact">Contact</a>
             </div>
         </nav>
-        <div class="top-bg">
-            <div class="top-bg-content">
+
+        <!-- background image -->
+        <div id="bg-image-container">
+            <div id="bg-content">
+
+            </div>
+        </div>
+
+        <!-- container for the remaining sections -->
+        <div id="the-sections">
+
+            <!-- discord section -->
+            <div id="discord-section">
+                <div class="discord-header">
+                    <h1 id="discord-header-text">Discord</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
+                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
+                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
+                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+
+                </div>
+                <div id="discord-feature-1">
+                    <img src="resources/bg.jpg"/>
+                    <h1 id="discord-header-text">Discord</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
+                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
+                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
+                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                </div>
+                <div id="discord-feature-2">
+                    <img src="resources/bg.jpg"/>
+                    <h1 id="discord-header-text">Discord</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
+                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
+                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
+                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                </div>
+                <div id="discord-feature-3">
+                    <img src="resources/bg.jpg"/>
+                    <h1 id="discord-header-text">Discord</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
+                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
+                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
+                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                </div>
+                <div id="discord-feature-4">
+                    <img src="resources/bg.jpg"/>
+                    <h1 id="discord-header-text">Discord</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
+                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
+                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
+                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                </div>
+            </div>
+            <div id="links-section">
 
             </div>
         </div>
