--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype HTML>
 <html lang="en"> 
     <head>
-        <title>a</title>
+        <title>Xyflux</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <link href="style.css" rel="stylesheet" type="text/css" />
@@ -12,10 +12,8 @@
 
     <body>
         <nav>
-            <img class="logo" src="image/logo.png" alt="small logo"/>
             <a class="navbar" href="index.html">Home</a>
-            <a class="navbar" href="#about">About</a>
-            <a class="navbar" href="#discord">Discord</a>
+            <a class="navbar" href="https://discord.gg/xyflux">Discord</a>
             <a class="navbar" href="#links">Links</a>
             <a class="navbar" href="#contact">Contact</a>
 
@@ -33,60 +31,65 @@
         <!-- background image -->
         <div id="bg-image-container">
             <div id="bg-content">
-
+                <h1 id="top-bg-header">Xyflux</h1>
+                <p id="top-bg-article">a short description just about me and what i do youtube and discord wise</p>
             </div>
         </div>
 
         <!-- container for the remaining sections -->
-        <div id="the-sections">
-
+        <div id="main-sections">
             <!-- discord section -->
             <div id="discord-section">
                 <div class="discord-header">
-                    <h1 id="discord-header-text">Discord</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
-                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
-                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
-                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
-
+                    <h1 class="header-text">Xy's Tower Discord Server</h1>
+                    <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
                 <div id="discord-feature-1">
                     <img src="resources/bg.jpg"/>
-                    <h1 id="discord-header-text">Discord</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
-                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
-                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
-                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                    <h1 class="discord-header-text">Active, Friendly Community</h1>
+                    <p>Xy's Tower hosts a welcoming community of amazing people. </p>
                 </div>
                 <div id="discord-feature-2">
                     <img src="resources/bg.jpg"/>
-                    <h1 id="discord-header-text">Discord</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
-                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
-                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
-                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                    <h1 class="discord-header-text">Events</h1>
+                    <p>Stay tuned for giveaways and other events including talent shows using the stage feature. </p>
                 </div>
                 <div id="discord-feature-3">
                     <img src="resources/bg.jpg"/>
-                    <h1 id="discord-header-text">Discord</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
-                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
-                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
-                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                    <h1 class="discord-header-text">Various Channels</h1>
+                    <p>Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like. 
+                        There's also plenty of voice channels as well.</p>
                 </div>
                 <div id="discord-feature-4">
                     <img src="resources/bg.jpg"/>
-                    <h1 id="discord-header-text">Discord</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ullamcorper eros risus, 
-                        vitae tincidunt enim ullamcorper in. Phasellus varius velit eu enim feugiat semper. 
-                        Vivamus ac ex pellentesque elit ultrices imperdiet. Phasellus ipsum quam, 
-                        ullamcorper ut fermentum id, tempus id nisl. Maecenas sed blandit libero. </p>
+                    <h1 class="discord-header-text">Safe</h1>
+                    <p>Our devoted staff guarantees you a safe experience through every step of the way 24/7.
+                        Xy's Tower is a SFW community server and abides by the Discord TOS.</p>
                 </div>
             </div>
-            <div id="links-section">
+            <div id="links">
+                <h1 class="header-text">Links</h1>
+                <h3>Connect with Xyflux on other platforms</h3><br>
+                <div id="social-links">
+                    <a><img src="resources/Instagram.png"/></a>
+                    <a><img src="resources/YouTube.png"/></a>
+                    <a><img src="resources/Twitter.png"/></a>
+                </div>
+                <br><br><br>
+            </div>
+            <div id="contact">
+                <h1 class="header-text" id="button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
+                <h3>Need support? Just join the discord server.</h3><br>
+                <br><br><br>
 
             </div>
         </div>
+        <br>
+        <div id="credits">
+            <p>Xy's Tower Discord Server by Xyflux</p>
+            <p>Site designed by deatg</p>
+        </div>
+        <br><br>
         
 
     </body>
