--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <h1 class="header-text">Links</h1>
                 <h3>Connect with Xyflux on other platforms</h3><br>
                 <div id="social-links">
-                    <a><img src="resources/Instagram.png"/></a>
-                    <a><img src="resources/YouTube.png"/></a>
-                    <a><img src="resources/Twitter.png"/></a>
+                    <a href="https://www.instagram.com/xyflux_/", target="_blank"><img src="resources/Instagram.png"/></a>
+                    <a href="https://www.youtube.com/channel/UCCvK4XdxAjl5FygzJkpkh2g", target="_blank"><img src="resources/YouTube.png"/></a>
+                    <a href="https://twitter.com/xyflux", target="_blank"><img src="resources/Twitter.png"/></a>
                 </div>
                 <br><br><br>
             </div>
