fixed navbar dropdown

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <button id="dropdown-button" onclick="ToggleNavMenu()">☰</button>
             <div id="hidden-menu">
                 <a class="hidden-menu-item" href="index.html">Home</a>
-                <a class="hidden-menu-item" href="#about">About</a>
-                <a class="hidden-menu-item" href="#discord">Discord</a>
+                <a class="hidden-menu-item" href="https://discord.gg/xyflux">Discord</a>
                 <a class="hidden-menu-item" href="#links">Links</a>
                 <a class="hidden-menu-item" href="#contact">Contact</a>
             </div>
@@ -30,10 +29,9 @@
 
         <!-- background image -->
         <div id="bg-image-container">
-            <div id="bg-content">
-                <h1 id="top-bg-header">Xyflux</h1>
-                <p id="top-bg-article">a short description just about me and what i do youtube and discord wise</p>
-            </div>
+            <h1 id="top-bg-header">Xyflux</h1>
+            <br><br><br>
+            <p id="top-bg-article">a short description just about me and what i do youtube and discord wise</p>
         </div>
 
         <!-- container for the remaining sections -->
