made it look a bit better on mobile and updated description

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="bg-image-container">
             <h1 id="top-bg-header">Xyflux</h1>
             <br><br><br>
-            <p id="top-bg-article">a short description just about me and what i do youtube and discord wise</p>
+            <p id="top-bg-article">Xyflux is an Discord Community Owner, and a Content Creator. <br> Scroll down to join his server, and connect with him on other platforms!</p>
         </div>
 
         <!-- container for the remaining sections -->
@@ -61,7 +61,7 @@
                 <div id="discord-feature-4">
                     <img src="resources/bg.jpg"/>
                     <h1 class="discord-header-text">Safe</h1>
-                    <p>Our devoted staff guarantees you a safe experience through every step of the way 24/7.
+                    <p>Our devoted staff guarantees you a safe experience every step of the way 24/7.
                         Xy's Tower is a SFW community server and abides by the Discord TOS.</p>
                 </div>
             </div>
