added transition effect

--- a/index.html
+++ b/index.html
@@ -29,54 +29,60 @@
 
         <!-- background image -->
         <div id="bg-image-container">
-            <h1 id="top-bg-header">Xyflux</h1>
+            <h1 id="top-bg-header" class="fade-in">Xyflux</h1>
             <br><br><br>
-            <p id="top-bg-article">Xyflux is an Discord Community Owner, and a Content Creator. <br> Scroll down to join his server, and connect with him on other platforms!</p>
+            <p id="top-bg-article" class="fade-in">Xyflux is a Discord Community Owner, and a Content Creator. <br> Scroll down to join his server, and connect with him on other platforms!</p>
         </div>
 
         <!-- container for the remaining sections -->
         <div id="main-sections">
             <!-- discord section -->
             <div id="discord-section">
-                <div class="discord-header">
+                <div class="discord-header fade-in">
                     <h1 class="header-text">Xy's Tower Discord Server</h1>
                     <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
-                <div id="discord-feature-1">
+                <div id="discord-feature-1" class="fade-in">
                     <img src="resources/bg.jpg"/>
                     <h1 class="discord-header-text">Active, Friendly Community</h1>
                     <p>Xy's Tower hosts a welcoming community of amazing people. </p>
                 </div>
-                <div id="discord-feature-2">
+                <div id="discord-feature-2" class="fade-in">
                     <img src="resources/bg.jpg"/>
                     <h1 class="discord-header-text">Events</h1>
                     <p>Stay tuned for giveaways and other events including talent shows using the stage feature. </p>
                 </div>
-                <div id="discord-feature-3">
+                <div id="discord-feature-3" class="fade-in">
                     <img src="resources/bg.jpg"/>
                     <h1 class="discord-header-text">Various Channels</h1>
                     <p>Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like. 
                         There's also plenty of voice channels as well.</p>
                 </div>
-                <div id="discord-feature-4">
+                <div id="discord-feature-4" class="fade-in">
                     <img src="resources/bg.jpg"/>
                     <h1 class="discord-header-text">Safe</h1>
                     <p>Our devoted staff guarantees you a safe experience every step of the way 24/7.
                         Xy's Tower is a SFW community server and abides by the Discord TOS.</p>
                 </div>
+                <div id="join-discord-section" class="fade-in">
+                    <br>
+                    <!-- <h1 class="discord-header-text">Ready to join?</h1> -->
+                    <h1 class="header-text button"  id="special-button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Click Here to Join</h1>
+                    <br><br>
+                </div>
             </div>
             <div id="links">
-                <h1 class="header-text">Links</h1>
+                <h1 class="header-text fade-in">Links</h1>
                 <h3>Connect with Xyflux on other platforms</h3><br>
-                <div id="social-links">
+                <div id="social-links" class="fade-in">
                     <a href="https://www.instagram.com/xyflux_/", target="_blank"><img src="resources/Instagram.png"/></a>
                     <a href="https://www.youtube.com/channel/UCCvK4XdxAjl5FygzJkpkh2g", target="_blank"><img src="resources/YouTube.png"/></a>
                     <a href="https://twitter.com/xyflux", target="_blank"><img src="resources/Twitter.png"/></a>
                 </div>
                 <br><br><br>
             </div>
-            <div id="contact">
-                <h1 class="header-text" id="button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
+            <div id="contact" class="fade-in">
+                <h1 class="header-text button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
                 <h3>Need support? Just join the discord server.</h3><br>
                 <br><br><br>
 
@@ -85,7 +91,7 @@
         <br>
         <div id="credits">
             <p>Xy's Tower Discord Server by Xyflux</p>
-            <p>Site designed by deatg</p>
+            <p>Site designed by <a id="deatg" href="http://deatg.com">deatg</a></p>
         </div>
         <br><br>
         
