--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Xyflux Homepage">
+        <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator. ">
+        <meta property="og:image" content="https://linkfork.co/images/poster.png">
         <link rel="shortcut icon" href="image/favicon.png" />
         <script src="script.js"></script>
     </head>
@@ -43,26 +47,26 @@
                     <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
                 <div id="discord-feature-1" class="fade-in">
-                    <img src="resources/bg.jpg"/>
+                    <img src="resources/discord1.png"/>
                     <h1 class="discord-header-text">Active, Friendly Community</h1>
-                    <p>Xy's Tower hosts a welcoming community of amazing people. </p>
+                    <p class="discord-description-right">An actively diverse multipurpose discord server for people to socialize, hangout, and make new friends. Enjoy an "All-In-One" experience!</p>
                 </div>
                 <div id="discord-feature-2" class="fade-in">
-                    <img src="resources/bg.jpg"/>
-                    <h1 class="discord-header-text">Events</h1>
-                    <p>Stay tuned for giveaways and other events including talent shows using the stage feature. </p>
+                    <img src="resources/discord2.png"/>
+                    <h1 class="discord-header-text">Safe</h1>
+                    <p class="discord-description-left">Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7.
+                        Omni Tower is a SFW community server. This discord server abides <a href="https://discord.com/terms">Discord's TOS</a> and limits certain content such as NSFW and other variations of the aforementioned.</p>
                 </div>
                 <div id="discord-feature-3" class="fade-in">
-                    <img src="resources/bg.jpg"/>
-                    <h1 class="discord-header-text">Various Channels</h1>
-                    <p>Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like. 
-                        There's also plenty of voice channels as well.</p>
+                    <img src="resources/discord3.png"/>
+                    <h1 class="discord-header-text">Events</h1>
+                    <p class="discord-description-right">We have a channel dedicated to host frequent giveaways and fun events! Our creative events are always fun to play with and get never boring!</p>
                 </div>
                 <div id="discord-feature-4" class="fade-in">
-                    <img src="resources/bg.jpg"/>
-                    <h1 class="discord-header-text">Safe</h1>
-                    <p>Our devoted staff guarantees you a safe experience every step of the way 24/7.
-                        Xy's Tower is a SFW community server and abides by the Discord TOS.</p>
+                    <img src="resources/discord4.png"/>
+                    <h1 class="discord-header-text">Various Channels</h1>
+                    <p class="discord-description-left">Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like! 
+                        There's also plenty of voice channels and a place to customize your roles.</p>
                 </div>
                 <div id="join-discord-section" class="fade-in">
                     <br>
@@ -73,7 +77,7 @@
             </div>
             <div id="links">
                 <h1 class="header-text fade-in">Links</h1>
-                <h3>Connect with Xyflux on other platforms</h3><br>
+                <h3 class="fade-in">Connect with Xyflux on other platforms</h3><br>
                 <div id="social-links" class="fade-in">
                     <a href="https://www.instagram.com/xyflux_/", target="_blank"><img src="resources/Instagram.png"/></a>
                     <a href="https://www.youtube.com/channel/UCCvK4XdxAjl5FygzJkpkh2g", target="_blank"><img src="resources/YouTube.png"/></a>
@@ -82,7 +86,7 @@
                 <br><br><br>
             </div>
             <div id="contact" class="fade-in">
-                <h1 class="header-text button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
+                <h1 class="header-text button" id="contact-button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
                 <h3>Need support? Just join the discord server.</h3><br>
                 <br><br><br>
 
@@ -90,8 +94,8 @@
         </div>
         <br>
         <div id="credits">
-            <p>Xy's Tower Discord Server by Xyflux</p>
-            <p>Site designed by <a id="deatg" href="http://deatg.com">deatg</a></p>
+            <p>Xy's Tower Discord Server by <a class="coolguy" href="#">Xyflux</a></p>
+            <p>Site designed by <a class="coolguy" href="http://deatg.com" target="_blank">deatg</a></p>
         </div>
         <br><br>
         
