modified images and added link to google doc

--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
                     <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
                 <div id="discord-feature-1" class="fade-in">
-                    <img src="resources/discord1.png"/>
+                    <img src="resources/discord1.png" alt="Chat"/>
                     <h1 class="discord-header-text">Active, Friendly Community</h1>
                     <p class="discord-description-right">An actively diverse multipurpose discord server for people to socialize, hangout, and make new friends. Enjoy an "All-In-One" experience!</p>
                 </div>
                 <div id="discord-feature-2" class="fade-in">
-                    <img src="resources/discord2.png"/>
+                    <a href="https://docs.google.com/document/d/1IqCCClolbzaRWwHxsuVl-o247fpFBb5J5aWhgbAYMdw/edit" target="_blank"><img src="resources/discord2.png" alt="Server Rules"/></a>
                     <h1 class="discord-header-text">Safe</h1>
                     <p class="discord-description-left">Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7.
                         Omni Tower is a SFW community server. This discord server abides <a href="https://discord.com/terms">Discord's TOS</a> and limits certain content such as NSFW and other variations of the aforementioned.</p>
                 </div>
                 <div id="discord-feature-3" class="fade-in">
-                    <img src="resources/discord3.png"/>
+                    <img src="resources/discord3.png" alt="Nitro giveaway and talent show"/>
                     <h1 class="discord-header-text">Events</h1>
                     <p class="discord-description-right">We have a channel dedicated to host frequent giveaways and fun events! Our creative events are always fun to play with and get never boring!</p>
                 </div>
                 <div id="discord-feature-4" class="fade-in">
-                    <img src="resources/discord4.png"/>
+                    <img src="resources/discord4.png" alt="Various Channels"/>
                     <h1 class="discord-header-text">Various Channels</h1>
                     <p class="discord-description-left">Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like! 
                         There's also plenty of voice channels and a place to customize your roles.</p>
