added favicon and embed image and fixed image sizing issue

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Xyflux Homepage">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator. ">
-        <link rel="shortcut icon" href="image/favicon.png" />
+        <meta property="og:image" content="resources/embed-icon.jpg">
+        <meta name="author" content="deatg">
+        <meta name="robots" content="index,follow">
+        <meta name="googlebot" content="index,follow">
+        <link rel="shortcut icon" href="resources/favicon.jpg"/>
         <script src="script.js"></script>
     </head>
 
@@ -51,7 +55,7 @@
                     <p class="discord-description-right">An actively diverse multipurpose discord server for people to socialize, hangout, and make new friends. Enjoy an "All-In-One" experience!</p>
                 </div>
                 <div id="discord-feature-2" class="fade-in">
-                    <a href="https://docs.google.com/document/d/1IqCCClolbzaRWwHxsuVl-o247fpFBb5J5aWhgbAYMdw/edit" target="_blank"><img src="resources/discord2.png" alt="Server Rules"/></a>
+                    <img src="resources/discord2.png" alt="Server Rules" id="rules-image" onclick="window.open('https://docs.google.com/document/d/1IqCCClolbzaRWwHxsuVl-o247fpFBb5J5aWhgbAYMdw/edit');"/>
                     <h1 class="discord-header-text">Safe</h1>
                     <p class="discord-description-left">Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7.
                         Omni Tower is a SFW community server. This discord server abides <a href="https://discord.com/terms">Discord's TOS</a> and limits certain content such as NSFW and other variations of the aforementioned.</p>
