--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Xyflux Homepage">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator. ">
-        <meta property="og:image" content="resources/embed-icon.jpg">
+        <meta name="og:image" itemprop="image" content="resources/embed-icon.jpg">
         <meta name="author" content="deatg">
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
