edit embed image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Xyflux Homepage">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator. ">
-        <meta name="og:image" itemprop="image" content="resources/embed-icon.jpg">
+        <meta name="og:image" itemprop="image" content="resources/">
+        <meta name="theme-color" content="#5865F2">
         <meta name="author" content="deatg">
         <meta name="robots" content="index,follow">
         <meta name="googlebot" content="index,follow">
