--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <link href="style.css" rel="stylesheet" type="text/css" />
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Xyflux Homepage">
-        <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator. ">
-        <meta name="og:image" itemprop="image" content="resources/embed-icon.jpg">
-        <meta name="theme-color" content="#5865F2">
-        <meta name="author" content="deatg">
-        <meta name="robots" content="index,follow">
-        <meta name="googlebot" content="index,follow">
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Xyflux Homepage"/>
+        <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator."/>
+        <meta property="og:image" content="resources/embed-icon.jpg" />
+        <meta name="og:image" itemprop="image" content="resources/embed-icon.jpg"/>
+        <meta property="twitter:image" content="resources/embed-icon.jpg">
+        <meta name="theme-color" content="#5865F2"/>
+        <meta name="author" content="deatg"/>
+        <meta name="robots" content="index,follow"/>
+        <meta name="googlebot" content="index,follow"/>
         <link rel="shortcut icon" href="resources/favicon.jpg"/>
         <script src="script.js"></script>
     </head>
