--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta property="og:image" content="https://wallpaperaccess.com/full/44746.jpg" />
         <meta name="og:image" itemprop="image" content="https://wallpaperaccess.com/full/44746.jpg"/>
         <meta property="twitter:image" content="https://wallpaperaccess.com/full/44746.jpg">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="theme-color" content="#5865F2"/>
         <meta name="author" content="deatg"/>
         <meta name="robots" content="index,follow"/>
