--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Xyflux Homepage"/>
+        <meta property="og:url" content="http://xyflux.com">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator."/>
         <meta property="og:image" content="https://wallpaperaccess.com/full/44746.jpg" />
         <meta name="og:image" itemprop="image" content="https://wallpaperaccess.com/full/44746.jpg"/>
         <meta property="twitter:image" content="https://wallpaperaccess.com/full/44746.jpg">
-        <meta name="twitter:card" content="summary_large_image">
         <meta name="theme-color" content="#5865F2"/>
         <meta name="author" content="deatg"/>
         <meta name="robots" content="index,follow"/>
