--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <meta property="og:title" content="Xyflux Homepage"/>
         <meta property="og:url" content="http://xyflux.com">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator."/>
-        <meta property="og:image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659151228190840/embed-icon.jpg" />
-        <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659151228190840/embed-icon.jpg"/>
-        <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659151228190840/embed-icon.jpg">
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659748811636756/unknown.png" />
+        <meta name="og:image" itemprop="image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659748811636756/unknown.png"/>
+        <meta property="twitter:image" content="https://cdn.discordapp.com/attachments/884488138326683688/894659748811636756/unknown.png">
         <meta name="theme-color" content="#5865F2"/>
         <meta name="author" content="deatg"/>
         <meta name="robots" content="index,follow"/>
