--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:title" content="Xyflux Homepage"/>
         <meta property="og:url" content="http://xyflux.com">
         <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator."/>
-        <meta name="og:image" content="resources/YouTube.png"/>
+        <meta property="og:image" content="resources/YouTube.png"/>
         <meta name="theme-color" content="#5865F2"/>
         <meta name="author" content="deatg"/>
         <meta name="robots" content="index,follow"/>
