--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Xyflux Homepage"/>
+        <meta property="og:url" content="http://xyflux.com">
+        <meta property="og:description" content="Xyflux is a Discord Community Owner and Content Creator."/>
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/884488138326683688/894672205294747718/embed-icon.png"/>
+        <meta name="theme-color" content="#5865F2"/>
         <meta name="author" content="deatg"/>
         <meta name="robots" content="index,follow"/>
         <meta name="googlebot" content="index,follow"/>
