--- a/index.html
+++ b/index.html
@@ -46,40 +46,77 @@
         <!-- container for the remaining sections -->
         <div id="main-sections">
             <!-- discord section -->
-            <div id="discord-section">
-                <div class="discord-header fade-in">
-                    <h1 class="header-text">Xy's Tower Discord Server</h1>
+            <div id="discord-sections" class="fade-in">
+
+                <div class="discord-section">
+                    <h1>Xy's Tower Discord Server</h1>
                     <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
-                <div id="discord-feature-1" class="fade-in">
-                    <img src="resources/discord1.png" alt="Chat"/>
-                    <h1 class="discord-header-text">Active, Friendly Community</h1>
-                    <p class="discord-description-right">An actively diverse multipurpose discord server for people to socialize, hangout, and make new friends. Enjoy an "All-In-One" experience!</p>
-                </div>
-                <div id="discord-feature-2" class="fade-in">
-                    <img src="resources/discord2.png" alt="Server Rules" id="rules-image" onclick="window.open('https://docs.google.com/document/d/1IqCCClolbzaRWwHxsuVl-o247fpFBb5J5aWhgbAYMdw/edit');"/>
-                    <h1 class="discord-header-text">Safe</h1>
-                    <p class="discord-description-left">Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7.
-                        Omni Tower is a SFW community server. This discord server abides <a href="https://discord.com/terms">Discord's TOS</a> and limits certain content such as NSFW and other variations of the aforementioned.</p>
-                </div>
-                <div id="discord-feature-3" class="fade-in">
-                    <img src="resources/discord3.png" alt="Nitro giveaway and talent show"/>
-                    <h1 class="discord-header-text">Events</h1>
-                    <p class="discord-description-right">We have a channel dedicated to host frequent giveaways and fun events! Our creative events are always fun to play with and get never boring!</p>
-                </div>
-                <div id="discord-feature-4" class="fade-in">
-                    <img src="resources/discord4.png" alt="Various Channels"/>
-                    <h1 class="discord-header-text">Various Channels</h1>
-                    <p class="discord-description-left">Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like! 
-                        There's also plenty of voice channels and a place to customize your roles.</p>
-                </div>
-                <div id="join-discord-section" class="fade-in">
-                    <br>
-                    <!-- <h1 class="discord-header-text">Ready to join?</h1> -->
-                    <h1 class="header-text button"  id="special-button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Click Here to Join</h1>
+
+                <div class="discord-section">
+
+                    <img class="svg" src="resources/svgexport-1.svg">
+                    <div class="discord-section content dark">
+                        <div class="image-side">
+                            <img src="resources/discord1.png" alt="Welcome image">
+                        </div>
+                        <div class="text-side">
+                            <h1 class="header-text">Active, Friendly Community</h1>
+                            <p>An actively diverse multipurpose discord server for people to socialize, hangout, and make new friends. Enjoy an "All-In-One" experience!</p>
+                        </div>
+                    </div>
+                    <img class="svg" src="resources/svgexport-2.svg">
+
                     <br><br>
+                    
+                    <div class="discord-section content">
+                        <div class="text-side">
+                            <h1 class="header-text">Safe</h1>
+                            <p>Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7. Omni Tower is a SFW community server. 
+                                This discord server abides Discord's TOS and limits certain content such as NSFW and other variations of the aforementioned.</p>
+                        </div>
+                        <div class="image-side">
+                            <img src="resources/discord2.png" alt="Server rules" id="rules-image" onclick="window.open('https://docs.google.com/document/d/1IqCCClolbzaRWwHxsuVl-o247fpFBb5J5aWhgbAYMdw/edit');">
+                        </div>
+                    </div>
+
+                    <br><br>
+
+                    <img class="svg" src="resources/svgexport-1.svg">
+                    <div class="discord-section content dark">
+                        <div class="image-side">
+                            <img src="resources/discord3.png" alt="Nitro giveaway">
+                        </div>
+                        <div class="text-side">
+                            <h1 class="header-text">Events</h1>
+                            <p>We have a channel dedicated to host frequent giveaways and fun events! Our creative events are always fun to play with and get never boring!</p>
+                        </div>
+                    </div>
+                    <img class="svg" src="resources/svgexport-2.svg">
+
+                    <br><br>
+
+                    <div class="discord-section content">
+                        <div class="text-side">
+                            <h1 class="header-text">Various Channels</h1>
+                            <p>Xy's Tower features tons of channels for all your chatting needs, such as anime, venting, bot commands, and even international where you can talk in any language you'd like! 
+                                There's also plenty of voice channels and a place to customize your roles.</p>
+                        </div>
+                        <div class="image-side">
+                            <img src="resources/discord4.png" alt="Choosing roles and viewing channels">
+                        </div>
+                    </div>
+
                 </div>
             </div>
+            <img class="svg fade-in" src="resources/svgexport-1.svg" />
+            <div id="join-discord-section" class="fade-in">
+                <br>
+                <!-- <h1 class="discord-header-text">Ready to join?</h1> -->
+                <h1 class="header-text button"  id="special-button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Click Here to Join</h1>
+                <br><br>
+            </div>
+            <img class="svg fade-in" src="resources/svgexport-2.svg" />
             <div id="links">
                 <h1 class="header-text fade-in">Links</h1>
                 <h3 class="fade-in">Connect with Xyflux on other platforms</h3><br>
@@ -94,7 +131,6 @@
                 <h1 class="header-text button" id="contact-button" onclick="window.open('https://discord.gg/xyflux', '_blank');">Contact</h1>
                 <h3>Need support? Just join the discord server.</h3><br>
                 <br><br><br>
-
             </div>
         </div>
         <br>
