made the sections have more space at the top and bottom

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- discord section -->
             <div id="discord-sections" class="fade-in">
 
-                <div class="discord-section">
+                <div class="discord-section" id="discord-header-section">
                     <h1>Xy's Tower Discord Server</h1>
                     <p>Welcome to Xy's Tower, a safe hangout for anyone looking to make new friends or talk about what you like.</p>
                 </div>
