edited navbar, fixed typo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="discord-section content">
                         <div class="text-side">
                             <h1 class="header-text">Safe</h1>
-                            <p>Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7. Omni Tower is a SFW community server. 
+                            <p>Our devoted staff team guarantees you a safe and promising experience through every step of the way 24/7. Xy's Tower is a SFW community server. 
                                 This discord server abides Discord's TOS and limits certain content such as NSFW and other variations of the aforementioned.</p>
                         </div>
                         <div class="image-side">
@@ -138,7 +138,7 @@
         <br>
         <div id="credits">
             <p>Xy's Tower Discord Server by <a class="coolguy" href="#">Xyflux</a></p>
-            <p>Site designed by <a class="coolguy" href="http://deatg.com" target="_blank">deatg</a></p>
+            <p>Site designed by <a class="coolguy" href="http://deatg.com" target="_blank">deatg</a> and .Harry#5364</p>
         </div>
         <br><br>
         
